--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.Hipo-logo {
+  width: 104px;
+  height: 52px;
+}
+
+#title {
+  all: unset;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 29px;
+  margin: 40px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#nameInput {
+  all: unset;
+  font-size: 14px;
+  color: #fff;
+  width: 320px;
+  height: 44px;
+  background: #0a0a0a;
+  border: 1px solid #292929;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 18px;
+  text-align: start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::placeholder {
+  color: #acacac;
 }
