--- a/src/components/ProfilePageResult/RepoCard/RepoCard.css
+++ b/src/components/ProfilePageResult/RepoCard/RepoCard.css
@@ -1,8 +1,11 @@
-.profile-page {
+.repo-card {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 166px;
-  padding-bottom: 50px;
+}
+
+.repo-card-title {
+  font-size: 18px;
+  margin-bottom: 17px;
 }
