--- a/src/components/ProfilePageResult/DataCard/UserHeader.css
+++ b/src/components/ProfilePageResult/DataCard/UserHeader.css
@@ -1,9 +1,7 @@
 .user-header {
   position: relative;
   top: -56px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 }
 
 .user-avatar {
@@ -11,12 +9,6 @@
   height: 112px;
   border-radius: 50%;
   margin-bottom: 25px;
-}
-
-.user-title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .user-name {
@@ -28,5 +20,4 @@
 .user-login {
   font-weight: 400;
   font-size: 14px;
-  margin-bottom: 5px;
 }
