--- a/src/components/ProfilePageResult/DataCard/DataCard.css
+++ b/src/components/ProfilePageResult/DataCard/DataCard.css
@@ -1,10 +1,11 @@
 .data-card {
   position: relative;
   width: 100%;
-  height: 277px;
+  background-color: #0a0a0a;
   border: 1px solid #292929;
   border-radius: 4px;
-  margin-bottom: 30px;
+  padding: 0 50px 45px;
+  margin: 0 auto 30px;
 }
 
 .user-url {
@@ -19,4 +20,18 @@
 
 .user-url:hover {
   color: #0da090;
+}
+
+@media screen and (max-width: 600px) {
+  .data-card {
+    padding: 0 20px 45px;
+  }
+}
+
+@media (max-width: 600px) {
+  .user-url {
+    top: unset;
+    right: 0;
+    bottom: -25px;
+  }
 }
