--- a/src/components/ProfilePageResult/ProfilePageResult.css
+++ b/src/components/ProfilePageResult/ProfilePageResult.css
@@ -1,6 +1,4 @@
 .profile-result {
-  width: 548px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 548px;
+  margin: auto;
 }
