--- a/src/components/ProfilePageResult/RepoCard/RepoCard.css
+++ b/src/components/ProfilePageResult/RepoCard/RepoCard.css
@@ -1,11 +1,5 @@
-.repo-card {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .repo-card-title {
+  text-align: center;
   font-size: 18px;
   margin-bottom: 17px;
 }
