--- a/src/components/ProfilePageResult/RepoCard/RepoInfo.css
+++ b/src/components/ProfilePageResult/RepoCard/RepoInfo.css
@@ -1,5 +1,4 @@
 .repo-link {
-  width: 100%;
   font: inherit;
   color: inherit;
   cursor: pointer;
@@ -10,8 +9,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  height: 91px;
+  max-width: 100%;
+  background-color: #0a0a0a;
   border: 1px solid #292929;
   border-radius: 4px;
   padding: 25px;
@@ -24,15 +23,20 @@
   background-color: #ffffff;
 }
 
+.repo-info {
+  max-width: 100%;
+  flex-shrink: 2;
+}
+
 .repo-title {
   font-size: 14px;
   margin-bottom: 5px;
 }
 
 .repo-text {
+  max-width: 350px;
   font-size: 14px;
   color: #acacac;
-  width: 350px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -48,4 +52,10 @@
   font-size: 12px;
   text-align: end;
   color: #acacac;
+}
+
+@media (max-width: 600px) {
+  .repo-text {
+    max-width: 200px;
+  }
 }
