--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -1,8 +1,4 @@
 .profile-page {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 166px;
-  padding-bottom: 50px;
+  padding: 166px 25px 50px;
 }
