--- a/src/components/ProfilePageResult/DataCard/DataCard.css
+++ b/src/components/ProfilePageResult/DataCard/DataCard.css
@@ -1,6 +1,6 @@
 .data-card {
   position: relative;
-  width: 100%;
+  max-width: 100%;
   background-color: #0a0a0a;
   border: 1px solid #292929;
   border-radius: 4px;
@@ -22,7 +22,7 @@
   color: #0da090;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .data-card {
     padding: 0 20px 45px;
   }
@@ -30,8 +30,12 @@
 
 @media (max-width: 600px) {
   .user-url {
-    top: unset;
-    right: 0;
-    bottom: -25px;
+    width: 14px;
+    height: 14px;
+  }
+
+  .url-text {
+    position: absolute;
+    visibility: hidden;
   }
 }
