--- a/src/components/ProfilePageResult/RepoCard/LoadMoreButton.css
+++ b/src/components/ProfilePageResult/RepoCard/LoadMoreButton.css
@@ -8,6 +8,7 @@
   border: 1px solid #72f2e4;
   border-radius: 4px;
   margin-top: 10px;
+  transition: color 0.5s, background-color 0.5s;
 }
 
 .load-more:hover {
