--- a/src/components/ProfilePageResult/RepoCard/RepoInfo.css
+++ b/src/components/ProfilePageResult/RepoCard/RepoInfo.css
@@ -15,6 +15,7 @@
   border-radius: 4px;
   padding: 25px;
   margin-bottom: 15px;
+  transition: color 0.5s, background-color 0.5s;
 }
 
 .repo-container:hover,
